# Segmentation_Agent

./: .env  .gitignore  AGENT_INSTRUCTIONS.md  README.md  launch.py  main.py  pyproject.toml  tools.py
Agent/: README.md  __init__.py  config.py  graph.py  hitl_agent.py  main.py  nodes.py  requirements.txt  sampler.py  state.py  tools.py
Agent/agents/: __init__.py  coder.py  planner.py
Agent/agents/coding/: agent.py  nodes.py
Agent/agents/preprocessing/: __init__.py  agent.py  nodes.py
Agent/core/: __init__.py  base_agent.py  llm_factory.py  pipeline.py  schema.py  state.py
Agent/core/hooks/: __init__.py  human_review.py
Agent/graph/: __init__.py  builder.py
Agent/tools/: __init__.py  executor.py  repl.py  sampler.py  sandbox.py  search.py
UI/: launch.py  pyproject.toml  viewer.yaml
UI/src/biovision_napari/: napari.yaml
UI/src/biovision_napari/io/: yaml_schema.py
UI/src/biovision_napari/services/: __init__.py  ollama_runtime.py
UI/src/biovision_napari/state/: project_state.py  viewer_state.py
UI/src/biovision_napari/ui/: agent_chat_panel.py  agent_panel.py  bookmark_panel.py  label_controls.py  llm_chat.py  main_widget.py
UI/src/biovision_napari/workers/: agent_worker.py  hitl_worker.py  image_worker.py
UI/tests/: test_mask_roundtrip.py  test_version_increment.py  test_yaml_validation.py
src/biovision_napari/io/: image_readers.py  mask_io.py  sample_discovery.py
src/biovision_napari/nav/: scroll_controller.py
src/biovision_napari/ui/: comparison_panel.py  dataset_browser.py
